tests/tooling/fixtures/native/execution/negative/compound_assignment_unknown_target.objc3
module CompoundAssignmentUnknownTarget;

fn main() -> i32 {
  value += 1;
  return 0;
}